--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-node_modules/
+# Learning content #
+###################
+/part01/course-practices
 
 # Compiled source #
 ###################
@@ -13,6 +15,7 @@ node_modules/
 ############
 # it's better to unpack these files and commit the raw source
 # git has its own built in compression methods
+node_modules/
 *.7z
 *.dmg
 *.gz
