--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Learning content #
 ###################
 /part01/course-practices
+/part02/course-practices
 
 # Compiled source #
 ###################
