exercise 3.1. to 3.6. completed

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 ###################
 /part01/course-practices
 /part02/course-practices
+/part03/course-practices
 
 # Compiled source #
 ###################
