phonebook backend submodule created

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /part01/course-practices
 /part02/course-practices
 /part03/course-practices
+/part03/phonebook-backend-new/
 
 # Compiled source #
 ###################
