phonebook backend/frontend update for cloud deployment

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /part01/course-practices
 /part02/course-practices
 /part03/course-practices
-/part03/phonebook-backend-new/
+# /part03/phonebook-exercise
 
 # Compiled source #
 ###################
