--- a/part04/blog-list-app/package.json
+++ b/part04/blog-list-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.4.0"
   },
   "devDependencies": {
