--- a/part04/blog-list-app/package.json
+++ b/part04/blog-list-app/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "node --test",
-    "dev": "nodemon index.js"
+    "test": "NODE_ENV=test node --test",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "start": "NODE_ENV=production node index.js"
   },
   "author": "nica",
   "license": "ISC",
@@ -17,6 +18,8 @@
   },
   "devDependencies": {
     "dotenv": "^16.4.5",
-    "nodemon": "^3.1.2"
+    "mongodb-memory-server": "^9.3.0",
+    "nodemon": "^3.1.2",
+    "supertest": "^7.0.0"
   }
 }
